<resources>
	<string name="quick_start">Quick start</string>
	<string name="saved_sessions">Saved sessions</string>
	<string name="landing_sign_in_footer">It’s our job to take your privacy seriously. UniqueID will never share your data</string>
	<string name="sign_up_title">Start your Unique ID profile</string>
	<string name="sign_up_email_explain">Your email will be used to sign in to your UniqueID account</string>
	<string name="sign_up_mobile_explain">Your phone number will be used to verify your identity</string>
	<string name="sign_up_min_length">Minimum length: 6 characters.</string>
	<string name="sign_up_condition_number">At least one number</string>
	<string name="sign_up_special"><![CDATA[At least one special character (-!@#$%&*)]]></string>
	<string name="sign_up_next">Next</string>
	<string name="vault_fragment_title">My Vault</string>
	<string name="google_app_id">494492933811</string>
	<string name="cancel">Cancel</string>
	<string name="activity">Activity</string>
	<string name="add_id_bottom_text">To create bank-level security we need a photo ID to secure
		your profile. The photo ID adds a significant layer to all of your secure data</string>
	<string name="take_photo">Take Photo</string>
	<string name="skip">Skip</string>
	<string name="verify_info_title">Verify your Information</string>
	<string name="id_documents_title">ID Documents</string>
	<string name="zero">0</string>
	<string name="select_an_item_to_add">Select an item to add</string>
	<string name="add">Add</string>
	<string name="start">Start</string>
	<string name="slide_1_title">Welcome to your Unique ID!</string>
	<string name="slide_1_desc">The information you are about to provide will be encrypted and
		securely stored in this device.</string>
	<string name="slide_2_title">Sharing with Unique ID</string>
	<string name="slide_2_desc">Your information is accessible based on the security preferences
		you have selected.</string>
	<string name="slide_3_title">Enterprise level security</string>
	<string name="slide_3_desc">Your documents and passwords are protected by encryption
		and biometric access.</string>
	<string name="bank_account">Bank Account</string>
	<string name="bank_explain">Signing in one-time with a bank account allows Unique ID to match the name on your ID Card with the one on your bank account for further authentication of your identity.</string>
	<string name="email_error">Value entered is not a proper email address</string>
	<string name="vault_layout_title">My Vault</string>
	<string name="add_id_initial_title">Add ID Card</string>
	<string name="add_id_back_text">Driver\'s license or Photo ID</string>
	<string name="sms_code">SMS Code</string>
	<string name="sms_explain">Enter the code below:</string>
	<string name="sms_error">SMS code should only be 6 numbers</string>
	<string name="resend">Resend</string>
	<string name="add_bank_title">Add Bank Account</string>
	<string name="got_it">Got it</string>
	<string name="skipping_the_bank_account">Skipping the Bank Account?</string>
	<string name="skip_bank_disclaimer">You can still use your Unique ID to store and share your information as an un-verified user. You can always verify later from the settings area.</string>
	<string name="error_message_user_duplicated">The user you are trying to register is already registered</string>
	<string name="error_message_device_duplicated">This device is already linked to a user.</string>
	<string name="error_message_unhandled_error">There was a problem, please try again later.</string>
	<string name="error_message_unhandled_error_login">There was a problem, please try to login later.</string>
	<string name="error_message_server_error">Cannot connect with the server. Please, try again in a few minutes.</string>
	<string name="error_message_user_not_found">User not found.</string>
	<string name="error_message_expired_ticket">The push operation has expired.</string>
	<string name="sign_in">Sign in</string>
	<string name="sign_in_toolbar_title">Log in to your Unique ID</string>
	<string name="retry">Retry</string>
	<string name="no_items">No items to display</string>
	<string name="file_from_web">Creation of files can only be performed from the web.</string>
	<string name="error_finger_so_sign_up">The device is not linked yet. Please Sign Up or Sign In.</string>
	<string name="error_message_user_no_match">The credentials don\'t match with this device</string>
	<string name="front">Front</string>
	<string name="back">Back</string>
	<string name="delete">Delete Account</string>
	<string name="delete_item">Delete</string>
	<string name="secure_share">Secure Share</string>
	<string name="verify_id_text">UniqueID needs you to enter your device unlock credentials (fingerprint, pattern, PIN or password) in order to verify your identity.</string>
	<string name="phone_too_long">Prefix and phone number should not exceed 12 characters.</string>
	<string name="error_message_incorrect_credentials">Incorrect credentials</string>
	<string name="error_message_email_not_validated">Email not yet validated.</string>
	<string name="error_message_not_user_linked">Device is not linked to any user.</string>
	<string name="secure_lock_setup"><![CDATA[Secure lock screen has not been set up.\nGo to \'Settings\' -> \'Security\' -> And set it up.]]></string>
	<string name="delete_item_question">Are you sure you want to delete this item?</string>
	<string name="no">No</string>
	<string name="yes">Yes</string>
	<string name="choose_media">Choose from Library</string>
	<string name="item_delete">Deleting Item</string>
	<string name="html_error"><![CDATA[<html><body><div align=\"center\"></div>An error occurred, try again in a few minutes</body>]]></string>
	<string name="save">Save</string>
	<string name="you_sure">Are you sure?</string>
	<string name="you_sure_explain">If you leave this screen without saving you will lose any information you might have entered</string>
	<string name="edit">"Edit"</string>
	<string name="shared_items">Shared Items</string>
	<string name="share_this_file">Share this File</string>
	<string name="share">Share</string>
	<string name="link_expiration">Link expiration</string>
	<string name="share_with">Share with:</string>
	<string name="share_this_file_select_user">Share this File: Select user</string>
	<string name="selected">Selected:</string>
	<string name="secure_share_notifications_have_been_sent_to">Secure share notifications have been sent to:</string>
	<string name="about_uniqueid_secure_sharing">About UniqueID secure sharing</string>
	<string name="stay_up_to_date_when_your_secure_items_are_accessed">Stay up to date when your secure items are accessed</string>
	<string name="control_or_restrict_access_anytime">Control or restrict access anytime</string>
	<string name="item_share_error">Item could not be shared. Please try again.</string>
	<string name="already_shared_with">The item has been shared with this user previously.</string>
	<string name="settings">Settings</string>
	<string name="user_info_title">Personal Information</string>
	<string name="email">Email</string>
	<string name="phone_number">Phone</string>
	<string name="id_exists">There already exists a validated ID Document.</string>
	<string name="id_uploaded">There already exists an image uploaded. Please, wait for the response.</string>
	<string name="bank_exists">There already exists a validated Bank Account.</string>
	<string name="change_picture">Change picture</string>
	<string name="auto_lock">Auto Lock</string>
	<string name="logout">Log out</string>
	<string name="delete_account_explain">You are about to delete your Unique ID account. This action is irreversible and you will lose all your data.</string>
	<string name="time_timer">TimeTimer</string>
	<string name="confirm">Confirm</string>
	<string name="password">Password</string>
	<string name="never">Never</string>
	<string name="twenty_four_hours">24 Hours</string>
	<string name="one_week">1 Week</string>
	<string name="one_month">1 Month</string>
	<string name="scan_card">Scan card</string>
	<string name="image_is_needed">A picture of the item is needed.</string>
	<string name="is_required">is required</string>
	<string name="contains_errors">contains errors</string>
	<string name="item_expires">Item Expires</string>
	<string name="today">Today</string>
	<string name="we_have_sent_a_message_to">We have sent a message to</string>
	<string name="add_one">Add a new item by pressing the plus button</string>
	<string name="add_user">Add a user to share the item.</string>
	<string name="about_pin_and_pattern">UniqueID will ask for your fingerprint, unlock PIN or
		pattern when your identity needs to be verified:</string>
	<string name="before_you_go">Before you go</string>
	<string name="to_create_an_item">To create an item</string>
	<string name="to_access_items">To access items</string>
	<string name="about_pin_and_pattern_this_is_mandatory">This is mandatory since access to the encryption keys is only granted to authenticated users.</string>
	<string name="about_pin_and_pattern_expiry">After a successful verification, UniqueID will not ask for neither your fingerprint, PIN or pattern for a couple of minutes and you will be able to operate normally until access to the secure storage has expired.</string>
	<string name="device_not_found">Device not found. Please try again</string>
	<string name="immediately">Immediately</string>
	<string name="ten_seconds">After 10 seconds</string>
	<string name="thirty_seconds">After 30 seconds</string>
	<string name="one_minute">After 1 minute</string>
	<string name="three_minutes">After 3 minutes</string>
	<string name="automatically_log_out">Automatically log out after navigating away from the app.\nShorter times are more secure</string>
	<string name="takes_2_minutes">Takes 2 minutes</string>
	<string name="verified">Verified: </string>
	<string name="error_connection_error">There is a problem with your connection. Check your wi-fi or data connection and try again.</string>
	<string name="wait_for_new_capture">Wait a little to take new image.</string>
	<string name="label_vault_fab_button">button_new_%s</string>
	<string name="label_navigate_button">navigate_button</string>
	<string name="label_about_pin_and_pattern_button_got_it">about_pin_and_pattern_button_got_it</string>
	<string name="label_add_bank_initial_button_next">add_bank_initial_button_next</string>
	<string name="label_add_bank_initial_button_skip">add_bank_initial_button_skip</string>
	<string name="label_add_bank_skip_button_got_it">add_bank_skip_button_got_it</string>
	<string name="label_add_id_initial_button_take_photo">add_id_initial_button_take_photo</string>
	<string name="label_add_id_initial_button_skip">add_id_initial_button_skip</string>
	<string name="label_auto_lock_immediately">auto_lock_immediately</string>
	<string name="label_auto_lock_ten_seconds">auto_lock_ten_seconds</string>
	<string name="label_auto_lock_thirty_seconds">auto_lock_thirty_seconds</string>
	<string name="label_auto_lock_one_minute">auto_lock_one_minute</string>
	<string name="label_landing_sign_up_linear_layout">landing_sign_up_linear_layout</string>
	<string name="label_landing_layout_button_sign_in">landing_layout_button_sign_in</string>
	<string name="multiple_steps">Multipart session</string>
	<string name="multipart_setup">Multipart Setup</string>
	<string name="how_many_parts">How many parts would you like to have?</string>
	<string name="time_s_up">TIME\'S UP</string>
	<string name="was_it_an_effective_meeting">Was it an effective meeting?</string>
	<string name="yes_we_did_it">Yes, we did it</string>
	<string name="so_so">So, so</string>
	<string name="dont_think_so">No, I don\'t think so</string>
	<string name="meeting_finished">MEETING FINISHED</string>
	<string name="how_long">What\'s the total duration (in minutes)?</string>
	<string name="new_meeting">New meeting</string>
	<string name="quit">Quit</string>
</resources>