<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="2"
		android:gravity="center"
		android:orientation="vertical">
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/time_s_up"
			android:textSize="24sp"
			android:textStyle="bold"/>
		<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/was_it_an_effective_meeting"
			android:textSize="18sp"
			android:textStyle="bold"/>
	</LinearLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:gravity="center"
		android:layout_weight="8"
		android:orientation="vertical"
		android:padding="10dp">
		<LinearLayout
			android:id="@+id/survey_button_yes"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="3"
			android:gravity="center"
			android:orientation="horizontal"
			android:background="@color/green"
			android:layout_margin="5dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:gravity="center_vertical"
				android:textSize="20sp"
				android:textStyle="bold"
				android:text="@string/yes_we_did_it"/>
			<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_gravity="center_vertical"
				android:layout_marginStart="10dp"
				android:src="@drawable/ic_thumb_up_white_48dp"/>
		</LinearLayout>
		<LinearLayout
			android:id="@+id/survey_button_meh"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="3"
			android:gravity="center"
			android:orientation="horizontal"
			android:background="@color/errorColor"
			android:layout_margin="5dp">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:gravity="center_vertical"
				android:textSize="20sp"
				android:textStyle="bold"
				android:text="@string/so_so"/>
		</LinearLayout>
		
		<LinearLayout
			android:id="@+id/survey_button_no"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_weight="3"
			android:gravity="center"
			android:orientation="horizontal"
			android:background="@color/red"
			android:layout_margin="5dp">
			<ImageView
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_gravity="center_vertical"
				android:layout_marginEnd="10dp"
				android:src="@drawable/ic_thumb_down_white_48dp"/>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textColor="@android:color/white"
				android:gravity="center_vertical"
				android:textSize="20sp"
				android:textStyle="bold"
				android:text="@string/dont_think_so"/>
			</LinearLayout>
	</LinearLayout>
</LinearLayout>