<?xml version="1.0" encoding="utf-8"?>
<android.support.percent.PercentFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_gravity="top"
		app:layout_heightPercent="50%"
		tools:layout_height="300dp">
		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:drawablePadding="5dp"
			android:drawableTop="@drawable/logo"
			android:paddingEnd="50dp"
			android:paddingStart="50dp"
			android:paddingTop="60dp"
			android:text="@string/time_timer"
			android:textColor="@android:color/white"
			android:textSize="35sp"
			android:textStyle="bold"
			android:gravity="center"/>

	</RelativeLayout>
	
	<LinearLayout
		android:layout_width="match_parent"
		app:layout_heightPercent="50%"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom"
		android:orientation="vertical"
		android:paddingBottom="20dp"
		android:paddingEnd="20dp"
		android:gravity="center"
		android:paddingStart="20dp">

		<LinearLayout
			android:id="@+id/landing_layout_button_quick_start"
			android:layout_width="match_parent"
			android:layout_height="70dp"
			android:background="@color/colorAccent"
			android:contentDescription="@string/label_landing_sign_up_linear_layout"
			android:foreground="?selectableItemBackground"
			android:gravity="center"
			android:orientation="vertical">
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/quick_start"
				android:textAlignment="center"
				android:textColor="@android:color/white"
				android:textSize="16sp"
				android:textStyle="bold"
				tools:ignore="NestedWeights" />

		</LinearLayout>

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="8dp"
			android:orientation="horizontal">

			<TextView
				android:id="@+id/landing_layout_button_multipart"
				android:layout_width="0dp"
				android:layout_height="60dp"
				android:layout_marginStart="2dp"
				android:layout_weight="1"
				android:background="#f0f5f7"
				android:contentDescription="@string/label_landing_layout_button_sign_in"
				android:foreground="?selectableItemBackground"
				android:gravity="center"
				android:drawableTop="@android:drawable/ic_menu_sort_by_size"
				android:text="@string/multiple_steps"
				android:textColor="#144460" />

			<!--<TextView-->
				<!--android:id="@+id/landing_layout_button_saved_sessions"-->
				<!--android:layout_width="0dp"-->
				<!--android:layout_height="60dp"-->
				<!--android:layout_marginStart="2dp"-->
				<!--android:layout_weight="1"-->
				<!--android:background="#f0f5f7"-->
				<!--android:contentDescription="@string/label_landing_layout_button_sign_in"-->
				<!--android:foreground="?selectableItemBackground"-->
				<!--android:gravity="center"-->
				<!--android:drawableTop="@android:drawable/btn_star_big_on"-->
				<!--android:text="@string/saved_sessions"-->
				<!--android:textColor="#144460" />-->

		</LinearLayout>

	</LinearLayout>

</android.support.percent.PercentFrameLayout>