<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">
	
	<TextView
		android:layout_width="wrap_content"
		android:layout_height="0dp"
		android:layout_gravity="center_horizontal"
		android:layout_weight="2"
		android:gravity="center"
		android:text="@string/meeting_finished"
		android:textSize="26sp"
		android:textStyle="bold" />
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="6"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="10dp">
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_margin="5dp"
			android:layout_weight="3"
			android:gravity="center"
			android:orientation="vertical">
			<ImageView
				android:layout_width="100dp"
				android:layout_height="100dp"
				android:layout_gravity="center"
				android:layout_marginStart="10dp"
				android:tint="@color/black"
				android:src="@drawable/ic_thumb_up_white_48dp" />
			<TextView
				android:id="@+id/end_session_message"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="default message"
				android:textSize="20sp"/>
		</LinearLayout>
		
	</LinearLayout><LinearLayout
		android:layout_width="match_parent"
		android:layout_height="0dp"
		android:layout_weight="3"
		android:gravity="center"
		android:orientation="vertical"
		android:padding="10dp">
		<LinearLayout
			android:id="@+id/survey_button_yes"
			android:layout_width="match_parent"
			android:layout_height="0dp"
			android:layout_margin="5dp"
			android:layout_weight="3"
			android:gravity="center"
			android:orientation="vertical">
			<Button
				android:id="@+id/end_session_button_new"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/new_meeting"
				android:textColor="@android:color/white"
				android:textStyle="bold"/>
			<Button
				android:id="@+id/end_session_button_quit"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/quit"
				android:textColor="@android:color/white"
				android:backgroundTint="@color/errorColor"
				android:textStyle="bold"/>
		</LinearLayout>
		
	</LinearLayout>
</LinearLayout>